// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ErrorWrapper renders correctly - basic 1`] = `
<div>
  success
</div>
`;

exports[`components/ErrorWrapper renders correctly - error, handler 1`] = `
<div>
  error
</div>
`;

exports[`components/ErrorWrapper renders correctly - error, no handler 1`] = `
<div>
  error
</div>
`;
